# Self_navigation_and_sanitization_rover

ldlidar_ros_ws/install/: local_setup.sh  setup.sh
ldlidar_ros_ws/install/a_star_new/share/a_star_new/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ldlidar_ros_ws/install/esp32_bridge/lib/esp32_bridge/: simple_a_star
ldlidar_ros_ws/install/esp32_bridge/share/esp32_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ldlidar_ros_ws/install/ldlidar_sl_ros2/lib/ldlidar_sl_ros2/: ldlidar_sl_ros2_node
ldlidar_ros_ws/install/ldlidar_sl_ros2/share/ldlidar_sl_ros2/: local_setup.sh  package.sh
ldlidar_ros_ws/install/nav2_mapless/share/ament_index/resource_index/package_run_dependencies/: nav2_mapless
ldlidar_ros_ws/install/nav2_mapless/share/nav2_mapless/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ldlidar_ros_ws/src/a_star_new/: setup.cfg  setup.py
ldlidar_ros_ws/src/a_star_new/a_star_new/: simple_a_star.py
ldlidar_ros_ws/src/a_star_new/launch/: a_star_launch.py
ldlidar_ros_ws/src/a_star_new/meshes/: base_link.STL
ldlidar_ros_ws/src/a_star_new/urdf/: assem2.urdf
ldlidar_ros_ws/src/esp32_bridge/: CMakeLists.txt  CMakeLists.txt.save  package.xml  setup.py
ldlidar_ros_ws/src/esp32_bridge/config/: cartographer.lua  mapless_nav_params.yaml  nav2_params.yaml  slam_toolbox.yaml  slam_toolbox_params.yaml
ldlidar_ros_ws/src/esp32_bridge/launch/: a_star_launch.py  full_robot.launch.py  ld14p.launch.py  motors_only.launch.py  simple_a_star_launch.py  slam_new.launch.py
ldlidar_ros_ws/src/esp32_bridge/rviz/: simple_a_star.rviz
ldlidar_ros_ws/src/esp32_bridge/scripts/: a_star_navigation.py  esp32_bridge_node.py.save  simple_a_star_nav.py  simple_navigation.py
ldlidar_ros_ws/src/esp32_bridge/src/: esp32_bridge.cpp  serial_bridge.cpp  udp_bridge.cpp
ldlidar_ros_ws/src/esp32_bridge/urdf/: assem2.urdf
ldlidar_ros_ws/src/ldlidar_sl_ros2/: CMakeLists.txt
ldlidar_ros_ws/src/ldlidar_sl_ros2/ldlidar_driver/src/: log_module.cpp
ldlidar_ros_ws/src/nav2_mapless/: CMakeLists.txt  package.xml
ldlidar_ros_ws/src/nav2_mapless/config/: nav2_mapless_params.yaml
ldlidar_ros_ws/src/nav2_mapless/launch/: mapless_launch.py
motortolidarv2/: motortolidarv2.ino
python_filr/New_folder/: Camera_cleaning.py  Cordinates_dirt_detection.py  patient.xlsx  sani.py  scanner.py
sanicode2/: sanicode2.ino
